--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,6 @@
 DEBUG=on
 SECRET_KEY="your-secret-key"
 
-DATABASE_URL=postgres://user:user-pass@db:3306/database
+DATABASE_URL=postgres://user:user-pass@db:3306/postgres
+POSTGRES_PASSWORD=user-pass
+POSTGRES_USER=user
