create default user

--- a/.env-sample
+++ b/.env-sample
@@ -4,3 +4,5 @@ SECRET_KEY="your-secret-key"
 DATABASE_URL=postgres://user:user-pass@db:5432/postgres
 POSTGRES_PASSWORD=user-pass
 POSTGRES_USER=user
+
+DJANGO_SUPERUSER_PASSWORD=admin123
